fix(app): footer jump after initial render

--- a/packages/web/src/app/app.component.scss
+++ b/packages/web/src/app/app.component.scss
@@ -7,6 +7,10 @@
   padding-top: 64px;
 }
 
+main {
+  flex: 1;
+}
+
 .page-with-sidenav {
   margin-top: 64px;
 
